--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,9 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+#yc-keys
+yc-auth-key.json
+
 # yarn v2
 .yarn/cache
 .yarn/unplugged
