Update dependencies, add event handling, and implement voice processing features
- Added axios dependency to package.json and package-lock.json for HTTP requests.
- Introduced EventController for managing event emissions and listeners.
- Implemented VoiceToNotionAgent class for processing voice messages and uploading to Yandex Cloud.
- Created action controllers for initializing emitters and handling voice requests.
- Updated bot setup to integrate new voice handling functionality.
- Added utility functions for file URL handling and stream downloading.
- Established configuration for Yandex Cloud storage in sdk/config.ts.
- Removed obsolete fileDownloader.ts and refactored related functionalities.
- Enhanced type definitions for better type safety and clarity in global.d.ts.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@grammyjs/files": "^1.1.1",
     "@notionhq/client": "^2.3.0",
     "@yandex-cloud/nodejs-sdk": "^2.8.0",
+    "axios": "^1.8.4",
     "dotenv": "^16.4.5",
     "grammy": "^1.30.0",
     "pino": "^9.5.0",
